--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^8.2.1",
     "core-js": "^3.6.5",
     "eslint-loader": "2.1.2",
+    "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "typewriter-effect": "^2.13.1",
