ignoring unfinished files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 node_modules
 /dist
 
+# temporary ignore 
+/src/pages/Journey.vue
+/src/pages/Skills_bars.vue
+/src/components/Timeline.vue
+README_template.node_modules
+
 
 # local env files
 .env.local
