skillbars; final fixes for live

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-portfolio",
+  "name": "Darian Nocera | Developer & Designer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
